Removed (refactored) intrinsic plugins
Got rid of intrinsic plugins- kept same functionality by hard-coding these features in. Intrinsic plugins was overengineering.